Fix z-index

--- a/proto/style.styl
+++ b/proto/style.styl
@@ -559,7 +559,7 @@ ul
 
 .map__zoom
   position absolute
-  z-index 2
+  z-index 202
   right 10px
   top 20px
 .map__zoom-in,
